Defined variables and placed old manats

--- a/index.html
+++ b/index.html
@@ -3,16 +3,70 @@
   <head>
     <meta charset="utf-8">
     <title>Vue.js basic app</title>
+
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <script src="https://unpkg.com/vue"></script>
   </head>
   <body>
    <div id="app">
+    <div class="old">
+
+     <div class="container">
+       <div class="row">
+         <div class="col-md-12">
+         <h1><b>{{nizami}} </b> Nizami,<b>{{mammad}} </b> Mammad,<b>{{shirvan}} </b> Shirvan, <b>{{momunaxatun}} </b> Momuna Xatun</h1>
+         </div>
+       </div>
+         <div class="row">
+
+
+          <div class="col-md-4">
+            <img class="img-responsive" src="img/nizami.jpg" alt="Nizami">
+          </div>
+        </div>
+        <br>
+        <br>
+          <div class="row">
+
+
+           <div class="col-md-4">
+             <img class="img-responsive" src="img/mammad.jpg" alt="Mammad">
+           </div>
+         </div>
+         <br>
+         <br>
+           <div class="row">
+
+
+            <div class="col-md-4">
+              <img class="img-responsive" src="img/shirvan.jpg" alt="Shirvan">
+            </div>
+          </div>
+          <br>
+          <br>
+            <div class="row">
+
+
+             <div class="col-md-4">
+               <a onclick="addMomunaXatun"><img class="img-responsive" src="img/momunaxatun.jpg" alt="Momunaxatun"></a>
+             </div>
+           </div>
+    </div>  </div>
+    <div class="new">
+
+      </div>
+
+
 
    </div>
-   <script src="https://unpkg.com/vue"></script>
-  <script src="main.js">
 
-  </script>
 
+
+
+
+
+
+  <script src="main.js"></script>
   </body>
 </html>
