--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   </head>
   <body>
    <div id="app">
+
+
     <div class="old">
 
      <div class="container">
@@ -54,8 +56,14 @@
            </div>
     </div>  </div>
     <div class="new">
-
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h1>{{newManat}} NEW AZN</h1>
+          </div>
+        </div>
       </div>
+    </div>
 
 
 
