--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
- <script src="https://unpkg.com/vue"></script>
+
   </head>
   <body>
    <div id="app">
@@ -24,7 +24,7 @@
 
 
           <div class="col-md-4">
-            <img class="img-responsive" src="img/nizami.jpg" alt="Nizami">
+            <button @click="addNizami"><img class="img-responsive" src="img/nizami.jpg" alt="Nizami"></button>
           </div>
         </div>
         <br>
@@ -33,7 +33,7 @@
 
 
            <div class="col-md-4">
-             <img class="img-responsive" src="img/mammad.jpg" alt="Mammad">
+            <button @click="addMammad"><img class="img-responsive" src="img/mammad.jpg" alt="Mammad"></button>
            </div>
          </div>
          <br>
@@ -42,7 +42,7 @@
 
 
             <div class="col-md-4">
-              <img class="img-responsive" src="img/shirvan.jpg" alt="Shirvan">
+                <button @click="addShirvan"><img class="img-responsive" src="img/shirvan.jpg" alt="Shirvan"></button>
             </div>
           </div>
           <br>
@@ -51,7 +51,7 @@
 
 
              <div class="col-md-4">
-               <a onclick="addMomunaXatun"><img class="img-responsive" src="img/momunaxatun.jpg" alt="Momunaxatun"></a>
+              <button @click="addMomunaXatun"><img class="img-responsive" src="img/momunaxatun.jpg" alt="Momuna Xatun"></button>
              </div>
            </div>
     </div>  </div>
@@ -60,6 +60,7 @@
         <div class="row">
           <div class="col-md-12">
             <h1>{{newManat}} NEW AZN</h1>
+        
           </div>
         </div>
       </div>
@@ -74,7 +75,7 @@
 
 
 
-
+ <script src="https://unpkg.com/vue"></script>
   <script src="main.js"></script>
   </body>
 </html>
