Clear button resets all old manat-s

--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
     <div class="new">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-10">
             <h1>{{newManat}} NEW AZN</h1>
-        
+
+          </div>
+          <div class="col-md-2">
+            <button @click="clear" class="btn btn-danger">Clear</button>
           </div>
         </div>
       </div>
