Changed button onclick events to image onclick events

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
           <div class="col-md-4">
-            <button @click="addNizami"><img class="img-responsive" src="img/nizami.jpg" alt="Nizami"></button>
+          <img class="img-responsive" @click="addNizami" src="img/nizami.jpg" alt="Nizami">
           </div>
         </div>
         <br>
@@ -33,7 +33,7 @@
 
 
            <div class="col-md-4">
-            <button @click="addMammad"><img class="img-responsive" src="img/mammad.jpg" alt="Mammad"></button>
+             <img class="img-responsive" @click="addMammad" src="img/mammad.jpg" alt="Mammad">
            </div>
          </div>
          <br>
@@ -42,7 +42,7 @@
 
 
             <div class="col-md-4">
-                <button @click="addShirvan"><img class="img-responsive" src="img/shirvan.jpg" alt="Shirvan"></button>
+          <img class="img-responsive" @click="addShirvan" src="img/shirvan.jpg" alt="Shirvan">
             </div>
           </div>
           <br>
@@ -51,7 +51,7 @@
 
 
              <div class="col-md-4">
-              <button @click="addMomunaXatun"><img class="img-responsive" src="img/momunaxatun.jpg" alt="Momuna Xatun"></button>
+            <img class="img-responsive" @click="addMomunaXatun" src="img/momunaxatun.jpg" alt="Momuna Xatun">
              </div>
            </div>
     </div>  </div>
